# SCA3300-D01-vibration-monitoring

./: .gitignore  NOTES.md  README.md  example_run.md
archive/: noise_reduct_acceler.py
daq/: .gitignore  CLOCKING.md  HARDWARE_TESTING.md  README.md  acquire.py  align.py  can_discover.py  can_map.todo.yaml  can_reader.py  clock.py  config.yaml  j1939.py  probe_sca3300.py  pyproject.toml  requirements.txt  sca3300.py
daq/deploy/: 99-daq-hardware.rules  daq-acquire.service  daq-can0-up.service  install.sh
daq/tests/: fakes.py  test_acquire.py  test_align.py  test_can_discover.py  test_can_reader.py  test_clock.py  test_j1939.py  test_probe_sca3300.py  test_sca3300.py
daq/tests/hardware/: _hw_common.py  test_acquire_soak.py  test_can_hardware.py  test_sca3300_hardware.py  watch_rpm.py
src/: config.py  dual_band_hardware_check.py  vibration_monitor.py
src/processing/: __init__.py  dual_band.py  trend.py
tests/: conftest.py  test_dual_band.py  test_regression.py  test_trend.py
